[package]
name = "arxiv-summarizer"
version = "0.1.0"
edition = "2024"
authors = ["Diego Pacheco"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
once_cell = "1.19"
lopdf = "0.34"
